Fixing annoying horizontal scroll issues caused by debug panel

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,6 @@
     flex: 1 1 auto;
 }
   
+.debug {
+    overflow-x: auto;
+}
